--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,15 +26,22 @@ jobs:
       - name: Build website
         run: npm run build
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: | 
-            dist
-            package.json
+          path: dist
+          # path: | 
+          #   dist
+          #   package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-files
+      - name: Output Contents
+        run: ls -l
       - name: Deploy
         run: echo "Deploying..."
