--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,6 +25,8 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish Ouput
+        run: find dist/assets/*.js -type f -execdir echo '{}' ';'
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
