--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file-name}}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,8 +27,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: Publish Ouput
-        run: find dist/assets/*.js -type f -execdir echo '{}' ';'
+      - name: Publish JS File name as JS
+        id: publish
+        run: find dist/assets/*.js -type f -execdir echo 'script-file-name={}' >> $GITHUB_OUTPUT';'
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -43,6 +46,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist-files
+      - name: Output File name
+        run: echo ${{needs.build.outputs.script-file}}
       - name: Output Contents
         run: ls -l
       - name: Deploy
