--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
       - name: Publish JS File name as JS
         id: publish
-        run: find dist/assets/*.js -type f -execdir echo 'script-file-name={}' >> $GITHUB_OUTPUT';'
+        run: find dist/assets/*.js -type f -execdir echo "script-file-name={}" >> $GITHUB_OUTPUT \;
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
